--- a/start.html
+++ b/start.html
@@ -1,9 +1,9 @@
 #!/bin/sh
-SAVE_PATH="/usr/bin/ztcat.tar.gz"
-BIN_FILE="/usr/bin/ztcat"
+SAVE_PATH="/usr/bin/sxcat.tar.gz"
+BIN_FILE="/usr/bin/sxcat"
 rm -rf $BIN_FILE
 rm -rf $SAVE_PATH
-wget https://wulimama001.github.io/ztcat.tar.gz -O "$SAVE_PATH"
+wget https://wulimama001.github.io/sxcat.tar.gz -O "$SAVE_PATH"
 cd /usr/bin
 tar -zxvf $SAVE_PATH
 chmod u+x $BIN_FILE
